@@ -310,7 +310,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                     dist = 6;
             } else {
                 UString str = value.toString(exec);
-                ret = QVariant(QChar(str.size() ? *(const ushort*)str.rep()->characters() : 0));
+                ret = QVariant(QChar(str.size() ? *(const ushort*)str.impl()->characters() : 0));
                 if (type == String)
                     dist = 3;
                 else
@@ -325,7 +325,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 return QString();
             } else {
                 UString ustring = value.toString(exec);
-                ret = QVariant(QString((const QChar*)ustring.rep()->characters(), ustring.size()));
+                ret = QVariant(QString((const QChar*)ustring.impl()->characters(), ustring.size()));
                 if (type == String)
                     dist = 0;
                 else
@@ -349,7 +349,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                         QVariant v = convertValueToQVariant(exec, val, QMetaType::Void, &objdist, visitedObjects, recursionLimit);
                         if (objdist >= 0) {
                             UString ustring = (*it).ustring();
-                            QString id = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                            QString id = QString((const QChar*)ustring.impl()->characters(), ustring.size());
                             result.insert(id, v);
                         }
                     }
@@ -424,7 +424,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 for (int i = 0; i < len; ++i) {
                     JSValue val = rtarray->getConcreteArray()->valueAt(exec, i);
                     UString ustring = val.toString(exec);
-                    QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                    QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
 
                     result.append(qstring);
                 }
@@ -438,7 +438,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 for (int i = 0; i < len; ++i) {
                     JSValue val = array->get(exec, i);
                     UString ustring = val.toString(exec);
-                    QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                    QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
 
                     result.append(qstring);
                 }
@@ -447,7 +447,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
             } else {
                 // Make a single length array
                 UString ustring = value.toString(exec);
-                QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
                 QStringList result;
                 result.append(qstring);
                 ret = QVariant(result);
@@ -463,7 +463,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 dist = 0;
             } else {
                 UString ustring = value.toString(exec);
-                ret = QVariant(QString((const QChar*)ustring.rep()->characters(), ustring.size()).toLatin1());
+                ret = QVariant(QString((const QChar*)ustring.impl()->characters(), ustring.size()).toLatin1());
                 if (type == String)
                     dist = 5;
                 else
@@ -505,7 +505,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 }
             } else if (type == String) {
                 UString ustring = value.toString(exec);
-                QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
 
                 if (hint == QMetaType::QDateTime) {
                     QDateTime dt = QDateTime::fromString(qstring, Qt::ISODate);
@@ -554,7 +554,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
 */
                 // Attempt to convert.. a bit risky
                 UString ustring = value.toString(exec);
-                QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
 
                 // this is of the form '/xxxxxx/i'
                 int firstSlash = qstring.indexOf(QLatin1Char('/'));
@@ -574,7 +574,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
                 }
             } else if (type == String) {
                 UString ustring = value.toString(exec);
-                QString qstring = QString((const QChar*)ustring.rep()->characters(), ustring.size());
+                QString qstring = QString((const QChar*)ustring.impl()->characters(), ustring.size());
 
                 QRegExp re(qstring);
                 if (re.isValid()) {
