@@ -1,3 +1,10 @@
+2010-08-10  Gavin Barraclough  <barraclough@apple.com>
+
+        Qt build fix.
+
+        * bridge/qt/qt_runtime.cpp:
+        (JSC::Bindings::convertValueToQVariant):
+
 2010-08-10  Jian Li  <jianli@chromium.org>
 
         Fix more build break.
